<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.max.biers.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <Button
        android:text="@string/secondeActivite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:id="@+id/bNewAct"
        android:layout_above="@+id/bNotif"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bApp"
        android:layout_marginBottom="17dp"
        android:onClick="oppenApp"
        android:layout_above="@+id/bNewAct"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_biere"
        android:layout_marginBottom="190dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2" />

    <Button
        android:text="@string/toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bNotif"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
